Fixed responsiveness for mobile size, Show icon only on small screens, Added button border and padding only for heading button, Changed Font.

--- a/src/globals.css
+++ b/src/globals.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap&family=Berkshire+Swash&display=swap');
 
 body {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: 'Poppins', Arial, sans-serif;
   background-color: #f4f4f9;
   color: #333;
   line-height: 1.6;
@@ -71,6 +71,11 @@ button {
   font-size: 0.9rem;
 }
 
+.heading-button {
+  border: 1px solid #fff;
+  padding: 10px 30px;
+}
+
 button:hover {
   background-color: #45a049;
 }
@@ -108,6 +113,38 @@ button i {
   button {
     padding: 6px 12px;
   }
+}
+
+@media (max-width: 500px) {
+  /* Styles for screens up to 500px wide */
+  body {
+    padding: 5px;
+  }
+  header {
+    font-size: 1rem;
+    padding: 5px;
+  }
+  .container {
+    margin: 0px;
+    padding: 5px;
+  }
+  table th, table td {
+    padding: 10px;
+  }
+  button {
+    padding: 10px;
+  }
+  .text-only { 
+    display: none; 
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  /* Styles for tablets */
+}
+
+@media (min-width: 769px) {
+  /* Styles for desktops */
 }
 
 input {
